feat: provide basic webui to show scanned domains and settings

--- a/templates/base.templ
+++ b/templates/base.templ
@@ -8,6 +8,7 @@ templ Base() {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>Skatcounter</title>
 			<script src="/static/htmx.js"></script>
+			<script src="/static/tailwind.js"></script>
 		</head>
 		<body id="content">
 			{ children... }
