--- a/templates/base.templ
+++ b/templates/base.templ
@@ -6,7 +6,7 @@ templ Base() {
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>Skatcounter</title>
+			<title>DockDNS</title>
 			<script src="/static/htmx.js"></script>
 			<script src="/static/tailwind.js"></script>
 		</head>
