--- a/templates/base.templ
+++ b/templates/base.templ
@@ -7,8 +7,8 @@ templ Base() {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>DockDNS</title>
-			<script src="/static/htmx.js"></script>
-			<script src="/static/tailwind.js"></script>
+			<script src="./static/htmx.js"></script>
+			<script src="./static/tailwind.js"></script>
 		</head>
 		<body id="content">
 			{ children... }
